--- a/VueJs_Practice/index/index.html
+++ b/VueJs_Practice/index/index.html
@@ -17,11 +17,34 @@
             <input type="submit" value="Submit">
         </form><br>
 
-        <br>{{ intro }} <br>
+        <section id="js-grid-list" class="grid-list" v-cloak>
 
-        <div>
-            {{ trainServices }}
-        </div>
+            <div class="tool-bar">
+                <!-- These link buttons use Vue.js to bind click events to change the "layout" variable and bind an active class -->
+                <a class="list-icon" v-on:click="layout = 'list'" v-bind:class="{ 'active': layout == 'list'}" title="List"></a>
+                <a class="grid-icon" v-on:click="layout = 'grid'" v-bind:class="{ 'active': layout == 'grid'}" title="Grid"></a>
+            </div>
+
+            <!-- Vue.js lets us choose which UL to show depending on the "layout" variable -->
+
+            <ul v-if="layout === 'grid'" class="grid">
+                <!-- A "grid" view with photos only -->
+                <li v-for="blog in blog_posts">
+                    <a v-bind:href="blog.url" v-bind:style="{ backgroundImage: 'url(' + blog.image.large + ')' }" target="_blank"></a>
+                </li>
+            </ul>
+
+            <ul v-if="layout === 'list'" class="list">
+                <!-- A "list" view with small photos and blog titles -->
+                <li v-for="blog in blog_posts">
+                    <a v-bind:href="blog.url" target="_blank">
+                        <img v-bind:src="blog.image.small">
+                        <p>{{blog.title}}</p>
+                    </a>
+                </li>
+            </ul>
+            <link rel="stylesheet" href="../css/listview.css">
+        </section>
 
         <div id="app">
             {{ info }}
@@ -32,6 +55,6 @@
 
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-    <script src="../Javascript/zugservice.js"></script>
+    <script src="../javascript/zugservice.js"></script>
 </body>
 </html>
