--- a/VueJs_Practice/index/index.html
+++ b/VueJs_Practice/index/index.html
@@ -8,16 +8,16 @@
 <body>
 
 <div id="home">
-    <!--    <form>-->
-    <!--        Zeit:<br>-->
-    <!--        <input type="text" name="time" placeholder="hh:mm"><br>-->
-    <!--        Von:<br>-->
-    <!--        <input type="text" name="from"><br>-->
-    <!--        Nach:<br>-->
-    <!--        <input type="text" name="to"><br>-->
-    <!--        <input type="submit" value="Submit">-->
-    <!--    </form>-->
-    <!--    <br>-->
+    <form>
+        Zeit:<br>
+        <input type="text" name="time" placeholder="hh:mm"><br>
+        Von:<br>
+        <input type="text" name="from"><br>
+        Nach:<br>
+        <input type="text" name="to"><br>
+        <input type="submit" value="Submit">
+    </form>
+    <br>
 
     <section id="js-grid-list" class="grid-list" v-cloak>
 
@@ -44,13 +44,27 @@
                             <img v-bind:src="waggon.image">
                             <div class="row-placeholder row1"></div>
                             <div class="row-placeholder row2">
-                                <button type="button" class="col1 reserved">Reservieren</button>
-                                <button type="button" class="col2">Reservieren</button>
+                                <button v-on:click="requestReservation(zug.uuid, 11, waggon.number)" id="11" type="button" class="col1 ">
+                                    Reservieren
+                                </button>
+                                <button v-on:click="requestReservation(zug.uuid, 13, waggon.number)" id="13" type="button" class="col2">
+                                    Reservieren
+                                </button>
                                 <button type="button" class="col3 unvisible">Reservieren</button>
-                                <button type="button" class="col4 ">Reservieren</button>
+                                <button v-on:click="requestReservation(zug.uuid, 17, waggon.number)" id="17" type="button" class="col4 ">
+                                    Reservieren
+                                </button>
+                                <button v-on:click="requestReservation(zug.uuid, 15, waggon.number)" id="15" type="button" class="col5 reserved">
+                                    Reservieren
+                                </button>
+                            </div>
+                            <div class="row-placeholder row3">
+                                <button type="button" class="col1 ">Reservieren</button>
+                                <button type="button" class="col2 reserved">Reservieren</button>
+                                <button type="button" class="col3 unvisible">Reservieren</button>
+                                <button type="button" class="col4 reserved">Reservieren</button>
                                 <button type="button" class="col5 reserved">Reservieren</button>
                             </div>
-                            <div class="row-placeholder row3"></div>
                         </div>
                     </li>
                 </template>
@@ -60,6 +74,7 @@
     </section>
 
     <div id="app">
+        <input v-on:click="getZugservices" type="submit" value="Submit">
         {{ info }}
     </div>
 
