--- a/VueJs_Practice/index/index.html
+++ b/VueJs_Practice/index/index.html
@@ -25,8 +25,10 @@
     <section id="js-grid-list" class="grid-list" v-cloak>
 
         <div class="tool-bar">
-            <a class="back-icon" v-if="layout === 'zugservice-detail'" v-on:click="layout = 'list'"
-               v-bind:class="{ 'active': layout == 'list'}" title="Back"></a>
+            <a class="back-icon" v-if="layout === 'zugservice-detail'" v-on:click="layout = 'list'" v-bind:class="{ 'active': layout == 'list'}" title="Back"></a>
+            <div v-if="layout === 'list'" class="infopanel">{{infoRequest}}</div>
+            <div v-else-if="layout === 'zugservice-detail'" class="infopanel">{{infoTrainDetail}}</div>
+
         </div>
 
         <ul v-if="layout === 'list'" class="list">
