--- a/VueJs_Practice/index/index.html
+++ b/VueJs_Practice/index/index.html
@@ -26,17 +26,16 @@
 
         <div class="tool-bar">
             <div v-on:click="backToHome" class="home-btn" v-if="layout === 'list'"></div>
-            <div v-on:click="layout = 'list'" class="back-icon" v-if="layout === 'zugservice-detail'"  title="Back"></div>
+            <div v-on:click="layout = 'list'" class="back-icon" v-if="layout === 'zugservice-detail'"
+                 title="Back"></div>
             <div v-if="layout === 'list'" class="infopanel">{{infoRequest}}</div>
             <div v-else-if="layout === 'zugservice-detail'" class="infopanel">{{infoTrainDetail}}</div>
         </div>
 
         <ul v-if="layout === 'list'" class="list">
-            <li v-for="zug in zugservices">
-                <a v-on:click="showZugserviceDetail(zug.uuid)">
-                    <p>{{zug.departure}} {{zug.from}} - {{zug.to}} {{zug.arrival}}</p>
-                    <p v-for="waggon in zug.zugkomposition">{{waggon.number}}</p>
-                </a>
+            <li v-for="zug in zugservices" v-on:click="showZugserviceDetail(zug.uuid)" class="zugservice">
+                <p>{{zug.departure}} {{zug.from}} - {{zug.to}} {{zug.arrival}}</p>
+                <p v-for="waggon in zug.zugkomposition">{{waggon.number}}</p>
             </li>
         </ul>
         <ul v-if="layout === 'zugservice-detail'" class="zugservice-detail">
@@ -48,18 +47,42 @@
                             <img v-bind:src="waggon.wagenplan.imageLink">
                             <div class="row-placeholder row1"></div>
                             <div class="row-placeholder row2">
-                                <button v-on:click="requestReservation(zug.uuid, 11, waggon.number, zug.from, zug.to)" id="11" type="button" class="col1" :class="setReservation(zug.uuid, waggon.number, 11)" :disabled="setDisabled(zug.uuid, waggon.number, 11)"></button>
-                                <button v-on:click="requestReservation(zug.uuid, 13, waggon.number, zug.from, zug.to)" id="13" type="button" class="col2" :class="setReservation(zug.uuid, waggon.number, 13)" :disabled="setDisabled(zug.uuid, waggon.number, 13)"></button>
+                                <button v-on:click="requestReservation(zug.uuid, 11, waggon.number, zug.from, zug.to)"
+                                        id="11" type="button" class="col1"
+                                        :class="setReservation(zug.uuid, waggon.number, 11)"
+                                        :disabled="setDisabled(zug.uuid, waggon.number, 11)"></button>
+                                <button v-on:click="requestReservation(zug.uuid, 13, waggon.number, zug.from, zug.to)"
+                                        id="13" type="button" class="col2"
+                                        :class="setReservation(zug.uuid, waggon.number, 13)"
+                                        :disabled="setDisabled(zug.uuid, waggon.number, 13)"></button>
                                 <button type="button" class="col3 invisible"></button>
-                                <button v-on:click="requestReservation(zug.uuid, 17, waggon.number, zug.from, zug.to)" id="17" type="button" class="col4" :class="setReservation(zug.uuid, waggon.number, 17)" :disabled="setDisabled(zug.uuid, waggon.number, 17)"></button>
-                                <button v-on:click="requestReservation(zug.uuid, 15, waggon.number, zug.from, zug.to)" id="15" type="button" class="col5" :class="setReservation(zug.uuid, waggon.number, 15)" :disabled="setDisabled(zug.uuid, waggon.number, 15)"></button>
+                                <button v-on:click="requestReservation(zug.uuid, 17, waggon.number, zug.from, zug.to)"
+                                        id="17" type="button" class="col4"
+                                        :class="setReservation(zug.uuid, waggon.number, 17)"
+                                        :disabled="setDisabled(zug.uuid, waggon.number, 17)"></button>
+                                <button v-on:click="requestReservation(zug.uuid, 15, waggon.number, zug.from, zug.to)"
+                                        id="15" type="button" class="col5"
+                                        :class="setReservation(zug.uuid, waggon.number, 15)"
+                                        :disabled="setDisabled(zug.uuid, waggon.number, 15)"></button>
                             </div>
                             <div class="row-placeholder row3">
-                                <button v-on:click="requestReservation(zug.uuid, 12, waggon.number, zug.from, zug.to)"type="button" id="12" class="col1" :class="setReservation(zug.uuid, waggon.number, 12)" :disabled="setDisabled(zug.uuid, waggon.number, 12)"></button>
-                                <button v-on:click="requestReservation(zug.uuid, 14, waggon.number, zug.from, zug.to)"type="button" id="14" class="col2" :class="setReservation(zug.uuid, waggon.number, 14)" :disabled="setDisabled(zug.uuid, waggon.number, 14)"></button>
+                                <button v-on:click="requestReservation(zug.uuid, 12, waggon.number, zug.from, zug.to)"
+                                        type="button" id="12" class="col1"
+                                        :class="setReservation(zug.uuid, waggon.number, 12)"
+                                        :disabled="setDisabled(zug.uuid, waggon.number, 12)"></button>
+                                <button v-on:click="requestReservation(zug.uuid, 14, waggon.number, zug.from, zug.to)"
+                                        type="button" id="14" class="col2"
+                                        :class="setReservation(zug.uuid, waggon.number, 14)"
+                                        :disabled="setDisabled(zug.uuid, waggon.number, 14)"></button>
                                 <button type="button" class="col3 invisible"></button>
-                                <button v-on:click="requestReservation(zug.uuid, 18, waggon.number, zug.from, zug.to)"type="button" id="18" class="col4" :class="setReservation(zug.uuid, waggon.number, 18)" :disabled="setDisabled(zug.uuid, waggon.number, 18)"></button>
-                                <button v-on:click="requestReservation(zug.uuid, 16, waggon.number, zug.from, zug.to)"type="button" id="16" class="col5" :class="setReservation(zug.uuid, waggon.number, 16)" :disabled="setDisabled(zug.uuid, waggon.number, 16)"></button>
+                                <button v-on:click="requestReservation(zug.uuid, 18, waggon.number, zug.from, zug.to)"
+                                        type="button" id="18" class="col4"
+                                        :class="setReservation(zug.uuid, waggon.number, 18)"
+                                        :disabled="setDisabled(zug.uuid, waggon.number, 18)"></button>
+                                <button v-on:click="requestReservation(zug.uuid, 16, waggon.number, zug.from, zug.to)"
+                                        type="button" id="16" class="col5"
+                                        :class="setReservation(zug.uuid, waggon.number, 16)"
+                                        :disabled="setDisabled(zug.uuid, waggon.number, 16)"></button>
                             </div>
                         </div>
                     </li>
