Mgnl Apps: update warning strings. Enable lower case Haltestellen names for request.

--- a/VueJs_Practice/index/index.html
+++ b/VueJs_Practice/index/index.html
@@ -17,9 +17,6 @@
             <input type="text" v-model="to" placeholder="Ende"><br>
             <input type="submit" value="Submit">
         </form>
-        <div id="reservation-confirmation">
-            {{reservationConfirmation}}
-        </div>
     </div>
 
     <section id="js-grid-list" v-if="layout === 'zugservice-detail' || layout === 'list'" class="grid-list" v-cloak>
@@ -42,6 +39,9 @@
             <template v-for="zug in zugservices">
                 <template v-if="zugserviceId === zug.uuid">
                     <li v-for="waggon in zug.zugkomposition" class="waggon">
+                        <div id="reservation-confirmation">
+                            {{reservationStatus}}
+                        </div>
                         <p>Waggon N°: {{waggon.number}} ({{waggon.wagenplan.description}})</p>
                         <div class="waggon-image">
                             <img v-bind:src="waggon.wagenplan.imageLink">
