ElementUI: styling. Placeholder.
Signed-off-by: yr <yannkristen.roth@students.bfh.ch>

--- a/VueJs_Practice/index/index.html
+++ b/VueJs_Practice/index/index.html
@@ -2,7 +2,8 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>BLS Sitzplatzreservation</title>
+    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
     <link rel="stylesheet" href="../css/listview.css">
 </head>
 <body>
@@ -12,22 +13,36 @@
             <div class="infopanel">Reservation</div>
             <div class="bls-icon"></div>
         </div>
-        <form @submit="getZugservices">
-            Zeit:<br>
-            <input type="text" v-model="time" placeholder="Abfahrt (hh:mm)"><br>
-            Von:<br>
-            <input type="text" v-model="from" placeholder="Start"><br>
-            Nach:<br>
-            <input type="text" v-model="to" placeholder="Ende"><br>
-            <input type="submit" value="Submit">
-        </form>
+        <el-form status-icon :rules="rules" label-width="120px" class="demo-ruleForm" size="medium">
+            <el-form-item label="Name" prop="name">
+                <el-input v-model="lastName" placeholder="Name"></el-input>
+            </el-form-item>
+            <el-form-item label="Vorname" prop="firstName" >
+                <el-input v-model="firstName" placeholder="Vorname"></el-input>
+            </el-form-item>
+            <el-form-item label="Geburtsdatum" prop="birth">
+                <el-date-picker v-model="birthDate" type="date" placeholder="Pick a date"></el-date-picker>
+            </el-form-item>
+            <el-form-item label="Zeit" prop="startTime">
+                <el-time-picker v-model="time" format="HH:mm" placeholder="Departure time"></el-time-picker>
+            </el-form-item>
+            <el-form-item label="Von" prop="startPlace">
+                <el-input v-model="from" placeholder="Haltestelle"></el-input>
+            </el-form-item>
+            <el-form-item label="Nach" prop="endPlace">
+                <el-input v-model="to" placeholder="Haltestelle"></el-input>
+            </el-form-item>
+            <el-form-item>
+                <el-button type="primary" @click="getZugservices">Suchen</el-button>
+            </el-form-item>
+        </el-form>
     </div>
 
     <section id="js-grid-list" v-if="layout === 'zugservice-detail' || layout === 'list'" class="grid-list" v-cloak>
 
         <div class="tool-bar">
             <div v-on:click="backToHome" class="home-btn" v-if="layout === 'list'"></div>
-            <div v-on:click="layout = 'list'" class="back-icon" v-if="layout === 'zugservice-detail'" title="Back"></div>
+            <div v-on:click="layout = 'list'" class="back-icon" v-if="layout === 'zugservice-detail'"  title="Back"></div>
             <div v-if="layout === 'list'" class="infopanel">{{infoRequest}}</div>
             <div v-else-if="layout === 'zugservice-detail'" class="infopanel">{{infoTrainDetail}}</div>
             <div class="bls-icon"></div>
@@ -61,23 +76,11 @@
                                 <button v-on:click="requestReservation(zug.uuid, 81, waggon.number, zug.from, zug.to)" id="81" type="button" class="col5" :class="setReservation(zug.uuid, waggon.number, 81)" :disabled="setDisabled(zug.uuid, waggon.number, 81)"></button>
                             </div>
                             <div class="row-placeholder row4">
-                                <button v-on:click="requestReservation(zug.uuid, 78, waggon.number, zug.from, zug.to)"
-                                        type="button" id="78" class="col1"
-                                        :class="setReservation(zug.uuid, waggon.number, 78)"
-                                        :disabled="setDisabled(zug.uuid, waggon.number, 78)"></button>
-                                <button v-on:click="requestReservation(zug.uuid, 77, waggon.number, zug.from, zug.to)"
-                                        type="button" id="77" class="col2"
-                                        :class="setReservation(zug.uuid, waggon.number, 77)"
-                                        :disabled="setDisabled(zug.uuid, waggon.number, 77)"></button>
+                                <button v-on:click="requestReservation(zug.uuid, 78, waggon.number, zug.from, zug.to)" type="button" id="78" class="col1" :class="setReservation(zug.uuid, waggon.number, 78)" :disabled="setDisabled(zug.uuid, waggon.number, 78)"></button>
+                                <button v-on:click="requestReservation(zug.uuid, 77, waggon.number, zug.from, zug.to)" type="button" id="77" class="col2" :class="setReservation(zug.uuid, waggon.number, 77)" :disabled="setDisabled(zug.uuid, waggon.number, 77)"></button>
                                 <button type="button" class="col3 invisible"></button>
-                                <button v-on:click="requestReservation(zug.uuid, 76, waggon.number, zug.from, zug.to)"
-                                        type="button" id="76" class="col4"
-                                        :class="setReservation(zug.uuid, waggon.number, 76)"
-                                        :disabled="setDisabled(zug.uuid, waggon.number, 76)"></button>
-                                <button v-on:click="requestReservation(zug.uuid, 75, waggon.number, zug.from, zug.to)"
-                                        type="button" id="75" class="col5"
-                                        :class="setReservation(zug.uuid, waggon.number, 75)"
-                                        :disabled="setDisabled(zug.uuid, waggon.number, 75)"></button>
+                                <button v-on:click="requestReservation(zug.uuid, 76, waggon.number, zug.from, zug.to)" type="button" id="76" class="col4" :class="setReservation(zug.uuid, waggon.number, 76)" :disabled="setDisabled(zug.uuid, waggon.number, 76)"></button>
+                                <button v-on:click="requestReservation(zug.uuid, 75, waggon.number, zug.from, zug.to)" type="button" id="75" class="col5" :class="setReservation(zug.uuid, waggon.number, 75)" :disabled="setDisabled(zug.uuid, waggon.number, 75)"></button>
                             </div>
                             <div class="row-placeholder row5">
                                 <button v-on:click="requestReservation(zug.uuid, 74, waggon.number, zug.from, zug.to)" id="74" type="button" class="col1" :class="setReservation(zug.uuid, waggon.number, 74)" :disabled="setDisabled(zug.uuid, waggon.number, 74)"></button>
@@ -95,9 +98,10 @@
 
 </div>
 
-
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="../js/zugservice.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+<script src="https://unpkg.com/element-ui/lib/index.js"></script>
 </body>
 </html>
