--- a/VueJs_Practice/index/index.html
+++ b/VueJs_Practice/index/index.html
@@ -2,6 +2,7 @@
 <html lang="de">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>BLS Sitzplatzreservation</title>
     <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
     <link rel="stylesheet" href="../css/listview.css">
@@ -49,10 +50,16 @@
         </div>
 
         <div v-if="layout === 'list'" class="list">
-            <div v-for="zug in zugservices" v-on:click="showZugserviceDetail(zug.uuid)" class="zugservice">
-                <p>{{zug.departure}} <span>{{zug.from}}</span> ––––––––––– <span>{{zug.to}}</span> {{zug.arrival}}</p>
-            </div>
+            <template v-for="zug in zugservices">
+<!--                <template v-if="this.allowDateCheck === true">-->
+                    <div class="date-separator" v-if="departureIsNextDay(zug.departure)">Zugverbindung Morgen</div>
+<!--                </template>-->
+                <div v-on:click="showZugserviceDetail(zug.uuid)" class="zugservice">
+                    <p>{{zug.departure}} <span>{{zug.from}}</span> ––––––––––– <span>{{zug.to}}</span> {{zug.arrival}}</p>
+                </div>
+            </template>
         </div>
+
         <div v-if="layout === 'zugservice-detail'" class="zugservice-detail">
             <template v-for="zug in zugservices">
                 <template v-if="zugserviceId === zug.uuid">
@@ -100,7 +107,7 @@
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-<script src="../js/zugservice.js"></script>
+<script type="module" src="../js/zugservice.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 <script src="https://unpkg.com/element-ui/lib/index.js"></script>
 </body>
